Update 2.7 Desensambla sus programa compilado y ejecutado en C++, y depurarlo via GEF.md

--- a/2.7 Desensambla sus programa compilado y ejecutado en C++, y depurarlo via GEF.md
+++ b/2.7 Desensambla sus programa compilado y ejecutado en C++, y depurarlo via GEF.md
@@ -1,3 +1,5 @@
-Evidencias
+# Evidencias:
+Desensambla sus programa compilado:
 ![g](https://user-images.githubusercontent.com/124218032/228988342-1e4aa4d6-859a-4075-8876-96e342840e9f.jpg)
+ejecutado en C++:
 ![image](https://user-images.githubusercontent.com/124218032/228989034-a3d42785-afb3-47c2-992a-bb4c59eb8df0.png)
