--- a/2.7 Desensambla sus programa compilado y ejecutado en C++, y depurarlo via GEF.md
+++ b/2.7 Desensambla sus programa compilado y ejecutado en C++, y depurarlo via GEF.md
@@ -3,3 +3,5 @@ Desensambla sus programa compilado:
 ![g](https://user-images.githubusercontent.com/124218032/228988342-1e4aa4d6-859a-4075-8876-96e342840e9f.jpg)
 ejecutado en C++:
 ![image](https://user-images.githubusercontent.com/124218032/228989034-a3d42785-afb3-47c2-992a-bb4c59eb8df0.png)
+depurarlo via GEF:
+![image](https://user-images.githubusercontent.com/124218032/228989869-b9d3d256-42cc-405c-9def-f17d45a45155.png)
